parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ATOI

Grammar

Rule 0     S' -> Line
Rule 1     Line -> Line Elem
Rule 2     Line -> <empty>
Rule 3     Exec -> Exec Elem
Rule 4     Exec -> Elem
Rule 5     Elem -> NUMB
Rule 6     Elem -> Operador
Rule 7     Elem -> .
Rule 8     Elem -> . STRING
Rule 9     Elem -> CHAR LETTER
Rule 10    Elem -> Loop
Rule 11    Elem -> Var
Rule 12    Elem -> COMENT
Rule 13    Elem -> EMIT
Rule 14    Elem -> CR
Rule 15    Elem -> SWAP
Rule 16    Elem -> DUP
Rule 17    Elem -> DROP
Rule 18    Elem -> KEY
Rule 19    Elem -> SPACE
Rule 20    Elem -> Function
Rule 21    Elem -> Word
Rule 22    Operador -> ADD
Rule 23    Operador -> SUB
Rule 24    Operador -> DIV
Rule 25    Operador -> MUL
Rule 26    Operador -> MOD
Rule 27    Operador -> NOT
Rule 28    Operador -> AND
Rule 29    Operador -> OR
Rule 30    Operador -> EQUAL
Rule 31    Operador -> BIGGERTHEN
Rule 32    Operador -> SMALLERTHEN
Rule 33    Operador -> BIGOREQ
Rule 34    Operador -> SMALOREQ
Rule 35    Var -> VARIABLE WORD
Rule 36    Var -> LOOPI
Rule 37    Var -> WORD !
Rule 38    Var -> WORD ?
Rule 39    Var -> WORD @
Rule 40    Var -> WORD MAIS_EXCLAMACAO
Rule 41    Elem -> IF Exec THEN
Rule 42    Elem -> IF Exec ELSE Exec THEN
Rule 43    Loop -> Begin Exec UNTIL
Rule 44    Loop -> Begin Exec WHILE Exec REPEAT
Rule 45    Loop -> Do Exec LOOP
Rule 46    Begin -> BEGIN
Rule 47    Do -> DO
Rule 48    Function -> Dots WORD Exec ;
Rule 49    Dots -> :
Rule 50    Word -> WORD
Rule 51    Word -> SPACES

Terminals, with rules where they appear

!                    : 37
.                    : 7 8
:                    : 49
;                    : 48
?                    : 38
@                    : 39
ADD                  : 22
AND                  : 28
ATOI                 : 
BEGIN                : 46
BIGGERTHEN           : 31
BIGOREQ              : 33
CHAR                 : 9
COMENT               : 12
CR                   : 14
DIV                  : 24
DO                   : 47
DROP                 : 17
DUP                  : 16
ELSE                 : 42
EMIT                 : 13
EQUAL                : 30
IF                   : 41 42
KEY                  : 18
LETTER               : 9
LOOP                 : 45
LOOPI                : 36
MAIS_EXCLAMACAO      : 40
MOD                  : 26
MUL                  : 25
NOT                  : 27
NUMB                 : 5
OR                   : 29
REPEAT               : 44
SMALLERTHEN          : 32
SMALOREQ             : 34
SPACE                : 19
SPACES               : 51
STRING               : 8
SUB                  : 23
SWAP                 : 15
THEN                 : 41 42
UNTIL                : 43
VARIABLE             : 35
WHILE                : 44
WORD                 : 35 37 38 39 40 48 50
error                : 

Nonterminals, with rules where they appear

Begin                : 43 44
Do                   : 45
Dots                 : 48
Elem                 : 1 3 4
Exec                 : 3 41 42 42 43 44 44 45 48
Function             : 20
Line                 : 1 0
Loop                 : 10
Operador             : 6
Var                  : 11
Word                 : 21

Parsing method: LALR

state 0

    (0) S' -> . Line
    (1) Line -> . Line Elem
    (2) Line -> .

    NUMB            reduce using rule 2 (Line -> .)
    .               reduce using rule 2 (Line -> .)
    CHAR            reduce using rule 2 (Line -> .)
    COMENT          reduce using rule 2 (Line -> .)
    EMIT            reduce using rule 2 (Line -> .)
    CR              reduce using rule 2 (Line -> .)
    SWAP            reduce using rule 2 (Line -> .)
    DUP             reduce using rule 2 (Line -> .)
    DROP            reduce using rule 2 (Line -> .)
    KEY             reduce using rule 2 (Line -> .)
    SPACE           reduce using rule 2 (Line -> .)
    IF              reduce using rule 2 (Line -> .)
    ADD             reduce using rule 2 (Line -> .)
    SUB             reduce using rule 2 (Line -> .)
    DIV             reduce using rule 2 (Line -> .)
    MUL             reduce using rule 2 (Line -> .)
    MOD             reduce using rule 2 (Line -> .)
    NOT             reduce using rule 2 (Line -> .)
    AND             reduce using rule 2 (Line -> .)
    OR              reduce using rule 2 (Line -> .)
    EQUAL           reduce using rule 2 (Line -> .)
    BIGGERTHEN      reduce using rule 2 (Line -> .)
    SMALLERTHEN     reduce using rule 2 (Line -> .)
    BIGOREQ         reduce using rule 2 (Line -> .)
    SMALOREQ        reduce using rule 2 (Line -> .)
    VARIABLE        reduce using rule 2 (Line -> .)
    LOOPI           reduce using rule 2 (Line -> .)
    WORD            reduce using rule 2 (Line -> .)
    SPACES          reduce using rule 2 (Line -> .)
    BEGIN           reduce using rule 2 (Line -> .)
    DO              reduce using rule 2 (Line -> .)
    :               reduce using rule 2 (Line -> .)
    $end            reduce using rule 2 (Line -> .)

    Line                           shift and go to state 1

state 1

    (0) S' -> Line .
    (1) Line -> Line . Elem
    (5) Elem -> . NUMB
    (6) Elem -> . Operador
    (7) Elem -> . .
    (8) Elem -> . . STRING
    (9) Elem -> . CHAR LETTER
    (10) Elem -> . Loop
    (11) Elem -> . Var
    (12) Elem -> . COMENT
    (13) Elem -> . EMIT
    (14) Elem -> . CR
    (15) Elem -> . SWAP
    (16) Elem -> . DUP
    (17) Elem -> . DROP
    (18) Elem -> . KEY
    (19) Elem -> . SPACE
    (20) Elem -> . Function
    (21) Elem -> . Word
    (41) Elem -> . IF Exec THEN
    (42) Elem -> . IF Exec ELSE Exec THEN
    (22) Operador -> . ADD
    (23) Operador -> . SUB
    (24) Operador -> . DIV
    (25) Operador -> . MUL
    (26) Operador -> . MOD
    (27) Operador -> . NOT
    (28) Operador -> . AND
    (29) Operador -> . OR
    (30) Operador -> . EQUAL
    (31) Operador -> . BIGGERTHEN
    (32) Operador -> . SMALLERTHEN
    (33) Operador -> . BIGOREQ
    (34) Operador -> . SMALOREQ
    (43) Loop -> . Begin Exec UNTIL
    (44) Loop -> . Begin Exec WHILE Exec REPEAT
    (45) Loop -> . Do Exec LOOP
    (35) Var -> . VARIABLE WORD
    (36) Var -> . LOOPI
    (37) Var -> . WORD !
    (38) Var -> . WORD ?
    (39) Var -> . WORD @
    (40) Var -> . WORD MAIS_EXCLAMACAO
    (48) Function -> . Dots WORD Exec ;
    (50) Word -> . WORD
    (51) Word -> . SPACES
    (46) Begin -> . BEGIN
    (47) Do -> . DO
    (49) Dots -> . :

    NUMB            shift and go to state 3
    .               shift and go to state 5
    CHAR            shift and go to state 6
    COMENT          shift and go to state 9
    EMIT            shift and go to state 10
    CR              shift and go to state 11
    SWAP            shift and go to state 12
    DUP             shift and go to state 13
    DROP            shift and go to state 14
    KEY             shift and go to state 15
    SPACE           shift and go to state 16
    IF              shift and go to state 19
    ADD             shift and go to state 20
    SUB             shift and go to state 21
    DIV             shift and go to state 22
    MUL             shift and go to state 23
    MOD             shift and go to state 24
    NOT             shift and go to state 25
    AND             shift and go to state 26
    OR              shift and go to state 27
    EQUAL           shift and go to state 28
    BIGGERTHEN      shift and go to state 29
    SMALLERTHEN     shift and go to state 30
    BIGOREQ         shift and go to state 31
    SMALOREQ        shift and go to state 32
    VARIABLE        shift and go to state 35
    LOOPI           shift and go to state 37
    WORD            shift and go to state 36
    SPACES          shift and go to state 39
    BEGIN           shift and go to state 40
    DO              shift and go to state 41
    :               shift and go to state 42

    Elem                           shift and go to state 2
    Operador                       shift and go to state 4
    Loop                           shift and go to state 7
    Var                            shift and go to state 8
    Function                       shift and go to state 17
    Word                           shift and go to state 18
    Begin                          shift and go to state 33
    Do                             shift and go to state 34
    Dots                           shift and go to state 38

state 2

    (1) Line -> Line Elem .

    NUMB            reduce using rule 1 (Line -> Line Elem .)
    .               reduce using rule 1 (Line -> Line Elem .)
    CHAR            reduce using rule 1 (Line -> Line Elem .)
    COMENT          reduce using rule 1 (Line -> Line Elem .)
    EMIT            reduce using rule 1 (Line -> Line Elem .)
    CR              reduce using rule 1 (Line -> Line Elem .)
    SWAP            reduce using rule 1 (Line -> Line Elem .)
    DUP             reduce using rule 1 (Line -> Line Elem .)
    DROP            reduce using rule 1 (Line -> Line Elem .)
    KEY             reduce using rule 1 (Line -> Line Elem .)
    SPACE           reduce using rule 1 (Line -> Line Elem .)
    IF              reduce using rule 1 (Line -> Line Elem .)
    ADD             reduce using rule 1 (Line -> Line Elem .)
    SUB             reduce using rule 1 (Line -> Line Elem .)
    DIV             reduce using rule 1 (Line -> Line Elem .)
    MUL             reduce using rule 1 (Line -> Line Elem .)
    MOD             reduce using rule 1 (Line -> Line Elem .)
    NOT             reduce using rule 1 (Line -> Line Elem .)
    AND             reduce using rule 1 (Line -> Line Elem .)
    OR              reduce using rule 1 (Line -> Line Elem .)
    EQUAL           reduce using rule 1 (Line -> Line Elem .)
    BIGGERTHEN      reduce using rule 1 (Line -> Line Elem .)
    SMALLERTHEN     reduce using rule 1 (Line -> Line Elem .)
    BIGOREQ         reduce using rule 1 (Line -> Line Elem .)
    SMALOREQ        reduce using rule 1 (Line -> Line Elem .)
    VARIABLE        reduce using rule 1 (Line -> Line Elem .)
    LOOPI           reduce using rule 1 (Line -> Line Elem .)
    WORD            reduce using rule 1 (Line -> Line Elem .)
    SPACES          reduce using rule 1 (Line -> Line Elem .)
    BEGIN           reduce using rule 1 (Line -> Line Elem .)
    DO              reduce using rule 1 (Line -> Line Elem .)
    :               reduce using rule 1 (Line -> Line Elem .)
    $end            reduce using rule 1 (Line -> Line Elem .)


state 3

    (5) Elem -> NUMB .

    NUMB            reduce using rule 5 (Elem -> NUMB .)
    .               reduce using rule 5 (Elem -> NUMB .)
    CHAR            reduce using rule 5 (Elem -> NUMB .)
    COMENT          reduce using rule 5 (Elem -> NUMB .)
    EMIT            reduce using rule 5 (Elem -> NUMB .)
    CR              reduce using rule 5 (Elem -> NUMB .)
    SWAP            reduce using rule 5 (Elem -> NUMB .)
    DUP             reduce using rule 5 (Elem -> NUMB .)
    DROP            reduce using rule 5 (Elem -> NUMB .)
    KEY             reduce using rule 5 (Elem -> NUMB .)
    SPACE           reduce using rule 5 (Elem -> NUMB .)
    IF              reduce using rule 5 (Elem -> NUMB .)
    ADD             reduce using rule 5 (Elem -> NUMB .)
    SUB             reduce using rule 5 (Elem -> NUMB .)
    DIV             reduce using rule 5 (Elem -> NUMB .)
    MUL             reduce using rule 5 (Elem -> NUMB .)
    MOD             reduce using rule 5 (Elem -> NUMB .)
    NOT             reduce using rule 5 (Elem -> NUMB .)
    AND             reduce using rule 5 (Elem -> NUMB .)
    OR              reduce using rule 5 (Elem -> NUMB .)
    EQUAL           reduce using rule 5 (Elem -> NUMB .)
    BIGGERTHEN      reduce using rule 5 (Elem -> NUMB .)
    SMALLERTHEN     reduce using rule 5 (Elem -> NUMB .)
    BIGOREQ         reduce using rule 5 (Elem -> NUMB .)
    SMALOREQ        reduce using rule 5 (Elem -> NUMB .)
    VARIABLE        reduce using rule 5 (Elem -> NUMB .)
    LOOPI           reduce using rule 5 (Elem -> NUMB .)
    WORD            reduce using rule 5 (Elem -> NUMB .)
    SPACES          reduce using rule 5 (Elem -> NUMB .)
    BEGIN           reduce using rule 5 (Elem -> NUMB .)
    DO              reduce using rule 5 (Elem -> NUMB .)
    :               reduce using rule 5 (Elem -> NUMB .)
    $end            reduce using rule 5 (Elem -> NUMB .)
    THEN            reduce using rule 5 (Elem -> NUMB .)
    ELSE            reduce using rule 5 (Elem -> NUMB .)
    UNTIL           reduce using rule 5 (Elem -> NUMB .)
    WHILE           reduce using rule 5 (Elem -> NUMB .)
    LOOP            reduce using rule 5 (Elem -> NUMB .)
    ;               reduce using rule 5 (Elem -> NUMB .)
    REPEAT          reduce using rule 5 (Elem -> NUMB .)


state 4

    (6) Elem -> Operador .

    NUMB            reduce using rule 6 (Elem -> Operador .)
    .               reduce using rule 6 (Elem -> Operador .)
    CHAR            reduce using rule 6 (Elem -> Operador .)
    COMENT          reduce using rule 6 (Elem -> Operador .)
    EMIT            reduce using rule 6 (Elem -> Operador .)
    CR              reduce using rule 6 (Elem -> Operador .)
    SWAP            reduce using rule 6 (Elem -> Operador .)
    DUP             reduce using rule 6 (Elem -> Operador .)
    DROP            reduce using rule 6 (Elem -> Operador .)
    KEY             reduce using rule 6 (Elem -> Operador .)
    SPACE           reduce using rule 6 (Elem -> Operador .)
    IF              reduce using rule 6 (Elem -> Operador .)
    ADD             reduce using rule 6 (Elem -> Operador .)
    SUB             reduce using rule 6 (Elem -> Operador .)
    DIV             reduce using rule 6 (Elem -> Operador .)
    MUL             reduce using rule 6 (Elem -> Operador .)
    MOD             reduce using rule 6 (Elem -> Operador .)
    NOT             reduce using rule 6 (Elem -> Operador .)
    AND             reduce using rule 6 (Elem -> Operador .)
    OR              reduce using rule 6 (Elem -> Operador .)
    EQUAL           reduce using rule 6 (Elem -> Operador .)
    BIGGERTHEN      reduce using rule 6 (Elem -> Operador .)
    SMALLERTHEN     reduce using rule 6 (Elem -> Operador .)
    BIGOREQ         reduce using rule 6 (Elem -> Operador .)
    SMALOREQ        reduce using rule 6 (Elem -> Operador .)
    VARIABLE        reduce using rule 6 (Elem -> Operador .)
    LOOPI           reduce using rule 6 (Elem -> Operador .)
    WORD            reduce using rule 6 (Elem -> Operador .)
    SPACES          reduce using rule 6 (Elem -> Operador .)
    BEGIN           reduce using rule 6 (Elem -> Operador .)
    DO              reduce using rule 6 (Elem -> Operador .)
    :               reduce using rule 6 (Elem -> Operador .)
    $end            reduce using rule 6 (Elem -> Operador .)
    THEN            reduce using rule 6 (Elem -> Operador .)
    ELSE            reduce using rule 6 (Elem -> Operador .)
    UNTIL           reduce using rule 6 (Elem -> Operador .)
    WHILE           reduce using rule 6 (Elem -> Operador .)
    LOOP            reduce using rule 6 (Elem -> Operador .)
    ;               reduce using rule 6 (Elem -> Operador .)
    REPEAT          reduce using rule 6 (Elem -> Operador .)


state 5

    (7) Elem -> . .
    (8) Elem -> . . STRING
